Remove unused data attributes from tooltips
Cleaned up HTML templates by removing unused data attributes (such as data-perso-name, data-perso-date-value, data-perso-collect, and data-perso-icon) from tooltip divs in AsusWRT, Monitoring, and Synology dashboard and mobile templates. This simplifies the markup and improves maintainability.

--- a/core/template/dashboard/AsusWRT.html
+++ b/core/template/dashboard/AsusWRT.html
@@ -171,7 +171,7 @@
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso1_display#;" data-perso-id="perso1" data-perso-value="#perso1#"
-			data-perso-name="#perso1_name#" data-perso-low="#perso1_colorlow#" data-perso-high="#perso1_colorhigh#"
+		data-perso-low="#perso1_colorlow#" data-perso-high="#perso1_colorhigh#"
 			data-perso-cmd-id="#perso1_id#" data-perso-unite="#perso1_unite#" data-perso-tendance="#perso1_tendance#"
 			data-perso-history='{"min":"#perso1_minHistory#","avg":"#perso1_averageHistory#","max":"#perso1_maxHistory#"}'>
 			<span title="#perso1_name#<br><i>Date de valeur : #perso1_value#<br>Date de collecte : #perso1_collect#</i>"
@@ -179,7 +179,7 @@
 			<span id="perso1_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso2_display#;" data-perso-id="perso2" data-perso-value="#perso2#"
-			data-perso-name="#perso2_name#" data-perso-low="#perso2_colorlow#" data-perso-high="#perso2_colorhigh#"
+		data-perso-low="#perso2_colorlow#" data-perso-high="#perso2_colorhigh#"
 			data-perso-cmd-id="#perso2_id#" data-perso-unite="#perso2_unite#" data-perso-tendance="#perso2_tendance#"
 			data-perso-history='{"min":"#perso2_minHistory#","avg":"#perso2_averageHistory#","max":"#perso2_maxHistory#"}'>
 			<span title="#perso2_name#<br><i>Date de valeur : #perso2_value#<br>Date de collecte : #perso2_collect#</i>"
@@ -187,7 +187,7 @@
 			<span id="perso2_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso3_display#;" data-perso-id="perso3" data-perso-value="#perso3#"
-			data-perso-name="#perso3_name#" data-perso-low="#perso3_colorlow#" data-perso-high="#perso3_colorhigh#"
+		data-perso-low="#perso3_colorlow#" data-perso-high="#perso3_colorhigh#"
 			data-perso-cmd-id="#perso3_id#" data-perso-unite="#perso3_unite#" data-perso-tendance="#perso3_tendance#"
 			data-perso-history='{"min":"#perso3_minHistory#","avg":"#perso3_averageHistory#","max":"#perso3_maxHistory#"}'>
 			<span title="#perso3_name#<br><i>Date de valeur : #perso3_value#<br>Date de collecte : #perso3_collect#</i>"
@@ -195,7 +195,7 @@
 			<span id="perso3_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso4_display#;" data-perso-id="perso4" data-perso-value="#perso4#"
-			data-perso-name="#perso4_name#" data-perso-low="#perso4_colorlow#" data-perso-high="#perso4_colorhigh#"
+		data-perso-low="#perso4_colorlow#" data-perso-high="#perso4_colorhigh#"
 			data-perso-cmd-id="#perso4_id#" data-perso-unite="#perso4_unite#" data-perso-tendance="#perso4_tendance#"
 			data-perso-history='{"min":"#perso4_minHistory#","avg":"#perso4_averageHistory#","max":"#perso4_maxHistory#"}'>
 			<span title="#perso4_name#<br><i>Date de valeur : #perso4_value#<br>Date de collecte : #perso4_collect#</i>"
