--- a/core/template/mobile/AsusWRT.html
+++ b/core/template/mobile/AsusWRT.html
@@ -162,32 +162,28 @@
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso1_display#;" data-perso-id="perso1" data-perso-value="#perso1#"
-			data-perso-name="#perso1_name#" data-perso-date-value="#perso1_value#" data-perso-collect="#perso1_collect#"
-			data-perso-icon="#perso1_icon#" data-perso-low="#perso1_colorlow#" data-perso-high="#perso1_colorhigh#"
+		data-perso-low="#perso1_colorlow#" data-perso-high="#perso1_colorhigh#"
 			data-perso-unite="#perso1_unite#">
 			<span title="#perso1_name# || Date valeur : #perso1_value# || Date collecte : #perso1_collect#"
 				style="width:15px;max-width:15px;max-height:15px;">#perso1_icon#</span>
 			<span id="perso1_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso2_display#;" data-perso-id="perso2" data-perso-value="#perso2#"
-			data-perso-name="#perso2_name#" data-perso-date-value="#perso2_value#" data-perso-collect="#perso2_collect#"
-			data-perso-icon="#perso2_icon#" data-perso-low="#perso2_colorlow#" data-perso-high="#perso2_colorhigh#"
+		data-perso-low="#perso2_colorlow#" data-perso-high="#perso2_colorhigh#"
 			data-perso-unite="#perso2_unite#">
 			<span title="#perso2_name# || Date valeur : #perso2_value# || Date collecte : #perso2_collect#"
 				style="width:15px;max-width:15px;max-height:15px;">#perso2_icon#</span>
 			<span id="perso2_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso3_display#;" data-perso-id="perso3" data-perso-value="#perso3#"
-			data-perso-name="#perso3_name#" data-perso-date-value="#perso3_value#" data-perso-collect="#perso3_collect#"
-			data-perso-icon="#perso3_icon#" data-perso-low="#perso3_colorlow#" data-perso-high="#perso3_colorhigh#"
+		data-perso-low="#perso3_colorlow#" data-perso-high="#perso3_colorhigh#"
 			data-perso-unite="#perso3_unite#">
 			<span title="#perso3_name# || Date valeur : #perso3_value# || Date collecte : #perso3_collect#"
 				style="width:15px;max-width:15px;max-height:15px;">#perso3_icon#</span>
 			<span id="perso3_unite#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #perso4_display#;" data-perso-id="perso4" data-perso-value="#perso4#"
-			data-perso-name="#perso4_name#" data-perso-date-value="#perso4_value#" data-perso-collect="#perso4_collect#"
-			data-perso-icon="#perso4_icon#" data-perso-low="#perso4_colorlow#" data-perso-high="#perso4_colorhigh#"
+		data-perso-low="#perso4_colorlow#" data-perso-high="#perso4_colorhigh#"
 			data-perso-unite="#perso4_unite#">
 			<span title="#perso4_name# || Date valeur : #perso4_value# || Date collecte : #perso4_collect#"
 				style="width:15px;max-width:15px;max-height:15px;">#perso4_icon#</span>
